--- a/SkillbarCapture.csproj
+++ b/SkillbarCapture.csproj
@@ -2,11 +2,13 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0-windows10.0.19041.0</TargetFramework>
+    <TargetFramework>net10.0-windows10.0.19041.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <UseWindowsForms>false</UseWindowsForms>
     <UseWPF>false</UseWPF>
+    <WindowsSdkPath>Q:\windowskit\</WindowsSdkPath>
+    <CsWinRTWindowsMetadata>Q:\windowskit\UnionMetadata\10.0.26100.0</CsWinRTWindowsMetadata>
   </PropertyGroup>
 
   <ItemGroup>
