--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,61 @@ TestResult*/
 # Misc
 *.DS_Store
 *.Thumbs.db
+onetime/fill/castbar_0087.png
+onetime/fill/castbar_0088.png
+onetime/fill/castbar_0089.png
+onetime/fill/castbar_0090.png
+onetime/fill/castbar_0091.png
+onetime/fill/castbar_0092.png
+onetime/fill/castbar_0093.png
+onetime/fill/castbar_0094.png
+onetime/fill/castbar_0095.png
+onetime/fill/castbar_0096.png
+onetime/fill/castbar_0097.png
+onetime/fill/castbar_0098.png
+onetime/fill/castbar_0099.png
+onetime/fill/castbar_0100.png
+onetime/fill/castbar_0101.png
+onetime/fill/castbar_0102.png
+onetime/fill/castbar_0103.png
+onetime/fill/castbar_0104.png
+onetime/fill/castbar_0105.png
+onetime/fill/castbar_0106.png
+onetime/fill/castbar_0107.png
+onetime/fill/castbar_0108.png
+onetime/fill/castbar_0109.png
+onetime/turnlight/castbar_0110.png
+onetime/turnlight/castbar_0111.png
+onetime/turnlight/castbar_0112.png
+onetime/turnlight/castbar_0113.png
+onetime/turnlight/castbar_0114.png
+onetime/turnlight/castbar_0115.png
+onetime/turnlight/castbar_0116.png
+onetime/turnlight/castbar_0117.png
+onetime/turnlight/castbar_0118.png
+onetime/turnout/castbar_0120.png
+onetime/turnout/castbar_0121.png
+onetime/turnout/castbar_0122.png
+onetime/turnout/castbar_0123.png
+onetime/turnout/castbar_0124.png
+onetime/turnout/castbar_0125.png
+onetime/turnout/castbar_0126.png
+onetime/turnout/castbar_0127.png
+onetime/turnout/castbar_0128.png
+onetime/turnout/castbar_0129.png
+onetime/turnout/castbar_0130.png
+onetime/turnout/castbar_0131.png
+onetime/turnout/castbar_0132.png
+onetime/turnout/castbar_0133.png
+onetime/turnout/castbar_0134.png
+onetime/turnout/castbar_0135.png
+onetime/turnout/castbar_0136.png
+onetime/turnout/castbar_0137.png
+onetime/turnout/castbar_0138.png
+onetime/turnout/castbar_0139.png
+onetime/turnout/castbar_0140.png
+onetime/turnout/castbar_0141.png
+onetime/turnout/castbar_0142.png
+online_test/fullshot.png
+online_test/full.png
+onetime.zip
