--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,22 @@ onetime/turnout/castbar_0142.png
 online_test/fullshot.png
 online_test/full.png
 onetime.zip
+onetime_cycle/
+onetimeall/
+phase_*.txt
+summary_*.txt
+temp_curv.ps1
+temp_posneg_all.ps1
+temp_posneg_turnlight.ps1
+temp_posneg.ps1
+temp_ratio_all.ps1
+temp_ratio_gray.ps1
+temp_ratio.ps1
+temp_sidediff.ps1
+temp_spark_contrast.ps1
+temp_spark_intensity.ps1
+temp_spark_multi.ps1
+temp_spark_neg.ps1
+temp_spark.ps1
+onetime/turnlight/castbar_0108.png
+onetime/turnlight/castbar_0109.png
