--- a/SkillbarCapture.csproj
+++ b/SkillbarCapture.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net10.0-windows10.0.19041.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <UseWindowsForms>false</UseWindowsForms>
     <UseWPF>false</UseWPF>
     <WindowsSdkPath>Q:\windowskit\</WindowsSdkPath>
